# offline-scripts-cli

./: AGENTS.md  README.md  WORKFLOW.md  install.sh  mcp_server.py  setup.cfg
extra/: README.md
offline_scripts/: __init__.py
offline_scripts/core/: __init__.py  file_ops.py  git_ops.py  parse_data.py
offline_scripts/extra/: __init__.py  codebase_map.py  csvsql.py  extract_entities.py  json2types.py  logdoctor.py  snippets.py  syncdir.py  test_skeleton.py
