[metadata]
name = offline-scripts-cli
version = 0.1.0
description = Small offline CLI tools for git, parsing, files, logs, CSV, and codebase automation.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = AK47
keywords = cli, offline, git, parsing, files, logs, csv, automation
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.9
include_package_data = False

[options.packages.find]
include =
    offline_scripts
    offline_scripts.*

[options.entry_points]
console_scripts =
    offline-git-ops = offline_scripts.core.git_ops:main
    offline-parse-data = offline_scripts.core.parse_data:main
    offline-file-ops = offline_scripts.core.file_ops:main
    offline-codebase-map = offline_scripts.extra.codebase_map:main
    offline-json2types = offline_scripts.extra.json2types:main
    offline-test-skeleton = offline_scripts.extra.test_skeleton:main
    offline-snippets = offline_scripts.extra.snippets:main
    offline-csvsql = offline_scripts.extra.csvsql:main
    offline-logdoctor = offline_scripts.extra.logdoctor:main
    offline-syncdir = offline_scripts.extra.syncdir:main
    offline-extract-entities = offline_scripts.extra.extract_entities:main
